--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>0</td>
-					<td>0</td>
+					<td>{{scoreNS}}</td>
+					<td>{{scoreEO}}</td>
 				</tr>
 			</tbody>
 		</table>
@@ -163,6 +163,7 @@
 <script src="js/libs/bootstrap.min.js"></script>
 <script src="js/libs/handlebars-1.1.2.js"></script>
 <script src="js/libs/ember-1.7.0.js"></script>
+<script src="js/libs/ember-data.js"></script>
 <script src="js/app.js"></script>
 <!-- to activate the test runner, add the "?test" query string parameter -->
 <script src="tests/runner.js"></script>
