--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Partie <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								{{#each partie in model}}
+								<li>{{#link-to 'partie' partie}}Partie en cours{{/link-to}}</li>
+								{{/each}}
+								<li><a href="#" {{action 'newPartie'}}>Nouvelle partie</a></li>
+								<li>{{#link-to 'parties'}}Toutes les parties{{/link-to}}</li>
+							</ul>
+						</li>
+						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Memo <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="#">Règles</a></li>
@@ -39,38 +49,73 @@
 	</script>
 
 	<script type="text/x-handlebars" data-template-name="index">
-		{{view "partie"}}
+		<h3>Bienvenue s</h3>
 	</script>
 
 	<script type="text/x-handlebars" data-template-name="donnes">
+		<h3>Donnes de la partie {{model.id}}</h3>
 		<table class="table">
 			<thead>
 				<tr>
 					<td>Attaquant</td>
 					<td>Contrat</td>
-					<td>Points faits NS</td>
-					<td>Points faits EO</td>
-					<td>Points réel NS</td>
-					<td>Points réel EO</td>
+					<!--td>Points faits NS</td-->
+					<!--td>Points faits EO</td-->
+					<!--td>Points réel NS</td-->
+					<!--td>Points réel EO</td-->
 					<td>Points marqués NS</td>
 					<td>Points marqués EO</td>
+					<td>Actions</td>
+				</tr>
+			</thead>
+			<tbody>
+				{{#each model.donnes}}
+				<tr>
+					<td>{{attaquant}}</td>
+					<td>{{contrat}} {{couleur}}</td>
+					<!--td>{{ptsFaitsNS}}</td-->
+					<!--td>{{ptsFaitsEO}}</td-->
+					<!--td>{{ptsReelsNS}}</td-->
+					<!--td>{{ptsReelsEO}}</td-->
+					<td>{{ptsMarquesNS}}</td>
+					<td>{{ptsMarquesEO}}</td>
+					<td>Supprimer</td>
+				</tr>
+				{{/each}}
+			</tbody>
+		</table>
+
+		{{#link-to 'partie'}}Retour à la partie{{/link-to}}
+	</script>
+
+	<script type="text/x-handlebars" data-template-name="parties">
+		<h3>Liste des parties</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<td>Id</td>
+					<td>Date</td>
+					<td>En cours</td>
+					<td>Actions</td>
 				</tr>
 			</thead>
 			<tbody>
 				{{#each}}
 				<tr>
-					<td>{{attaquant}}</td>
-					<td>{{contrat}} {{couleur}}</td>
-					<td>{{ptsFaitsNS}}</td>
-					<td>{{ptsFaitsEO}}</td>
-					<td>{{ptsReelsNS}}</td>
-					<td>{{ptsReelsEO}}</td>
-					<td>{{ptsMarquesNS}}</td>
-					<td>{{ptsMarquesEO}}</td>
+					<td>{{id}}</td>
+					<td>{{date}}</td>
+					<td>{{enCours}}</td>
+					<td>
+						<button {{action 'deletePartie' id}} type="button" class="btn btn-default btn-sm" data-toggle="modal">
+							<span class="glyphicon glyphicon-delete"></span> Supprimer
+						</button>
+					 Voir les donnes</td>
 				</tr>
 				{{/each}}
 			</tbody>
 		</table>
+
+		{{#link-to 'partie'}}Retour à la partie{{/link-to}}
 	</script>
 
 	<script type="text/x-handlebars" data-template-name="partie">
@@ -89,9 +134,10 @@
 				</tr>
 			</tbody>
 		</table>
-		<button {{action 'showModal' 'ajouterDonneModal'}} type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#ajouterDonne">
+		<button {{action 'showModal' 'ajouterDonneModal' model}} type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#ajouterDonne">
 			<span class="glyphicon glyphicon-plus"></span> Ajouter une donne
 		</button>
+		{{#link-to 'donnes' model}}Voir toutes les donnes{{/link-to}}
 	</script>
 
 	<script type="text/x-handlebars" data-template-name="ajouterDonneModal">
@@ -108,20 +154,20 @@
 			</div>
 			<div class="form-group">
 				<label for="inputContrat" class="col-sm-2 control-label">Contrat</label>
-				<div class="col-sm-10">
+				<div class="col-sm-6">
 					{{view Ember.Select content=contrats value=model.contrat classNames="form-control"}}
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputCouleur" class="col-sm-2 control-label">Couleur</label>
-				<div class="col-sm-10">
+				<div class="col-sm-6">
 					{{view Ember.Select content=couleurs value=model.couleur classNames="form-control"}}
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="col-sm-10">
 					<label for="inputPtsFaitsNS" class="col-sm-6 control-label">Points faits Nord-Sud</label>
-					{{input type="number" id="ptsFaitsNS" value=model.ptsFaitsNS}}
+					{{input type="number" id="ptsFaitsNS" value=model.ptsFaitsNS action="updatedPtsFaitsNS" on="enter"}}
 					{{input type="checkbox" name="beloteNS" checked=model.beloteNS}} Belote
 				</div>
 				<div class="col-sm-10">
@@ -136,7 +182,7 @@
 			<div class="form-group">
 				<div class="col-sm-10">
 					<label for="inputPtsFaitsEO" class="col-sm-6 control-label">Points faits Est-Ouest</label>
-					{{input type="number" id="ptsFaitsEO" value=model.ptsFaitsEO}}
+					{{input type="number" id="ptsFaitsEO" value=model.ptsFaitsEO action="updatedPtsFaitsEO" on="enter"}}
 					{{input type="checkbox" name="beloteEO" checked=model.beloteEO}} Belote
 				</div>
 				<div class="col-sm-10">
@@ -180,6 +226,7 @@
 <script src="js/libs/handlebars-1.1.2.js"></script>
 <script src="js/libs/ember-1.7.0.js"></script>
 <script src="js/libs/ember-data.js"></script>
+<script src="js/libs/localstorage_adapter.js"></script>
 <script src="js/app.js"></script>
 <!-- to activate the test runner, add the "?test" query string parameter -->
 <script src="tests/runner.js"></script>
