--- a/index.html
+++ b/index.html
@@ -289,13 +289,41 @@
 	</div>
 </script>
 
+<!--Libs-->
 <script src="js/libs/jquery-1.10.2.js"></script>
 <script src="js/libs/bootstrap.min.js"></script>
 <script src="js/libs/handlebars-1.1.2.js"></script>
 <script src="js/libs/ember-1.7.0.js"></script>
 <script src="js/libs/ember-data.js"></script>
 <script src="js/libs/localstorage_adapter.js"></script>
+
+<!--Application-->
 <script src="js/app.js"></script>
+
+<!--Routes-->
+<script src="js/routes/partieRoute.js"></script>
+<script src="js/routes/partiesRoute.js"></script>
+<script src="js/routes/donnesRoute.js"></script>
+<script src="js/routes/allDonnesRoute.js"></script>
+
+<!--Controllers-->
+<script src="js/controllers/ajouterDonneModalController.js"></script>
+<script src="js/controllers/allDonnesController.js"></script>
+<script src="js/controllers/donnesController.js"></script>
+<script src="js/controllers/partieController.js"></script>
+<script src="js/controllers/partiesController.js"></script>
+
+<!--Views-->
+<script src="js/views/radioButtonView.js"></script>
+
+<!--Models-->
+<script src="js/models/donne.js"></script>
+<script src="js/models/partie.js"></script>
+
+<!--Components-->
+<script src="js/components/myModalComponent.js"></script>
+
+
 <!-- to activate the test runner, add the "?test" query string parameter -->
 <script src="tests/runner.js"></script>
 </body>
