fix applicationRoute manquant

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 <script src="js/app.js"></script>
 
 <!--Routes-->
+<script src="js/routes/applicationRoute.js"></script>
 <script src="js/routes/partieRoute.js"></script>
 <script src="js/routes/partiesRoute.js"></script>
 <script src="js/routes/donnesRoute.js"></script>
