Ajout controle de coherence et champs en readonly

--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
 				</div>
 				<div class="col-sm-10">
 					<label for="inputPtsReelsNS" class="col-sm-6 control-label">Points réels Nord-Sud</label>
-					{{input type="number" id="ptsReelsNS" value=model.ptsReelsNS}}
+					{{input type="number" readonly=true id="ptsReelsNS" value=model.ptsReelsNS}}
 				</div>
 				<div class="col-sm-10">
 					<label for="inputPtsMarquesNS" class="col-sm-6 control-label">Points marqués Nord-Sud</label>
-					{{input type="number" id="ptsMarquesNS" value=model.ptsMarquesNS}}
+					{{input type="number" readonly=true id="ptsMarquesNS" value=model.ptsMarquesNS}}
 				</div>
 			</div>
 			<div class="form-group">
@@ -255,11 +255,11 @@
 				</div>
 				<div class="col-sm-10">
 					<label for="inputPtsReelsEO" class="col-sm-6 control-label">Points réels Est-Ouest</label>
-					{{input type="number" id="ptsReelsEO" value=model.ptsReelsEO}}
+					{{input type="number" readonly=true id="ptsReelsEO" value=model.ptsReelsEO}}
 				</div>
 				<div class="col-sm-10">
 					<label for="inputPtsMarquesEO" class="col-sm-6 control-label">Points marqués Est-Ouest</label>
-					{{input type="number" id="ptsMarquesEO" value=model.ptsMarquesEO}}
+					{{input type="number" readonly=true id="ptsMarquesEO" value=model.ptsMarquesEO}}
 				</div>
 			</div>
 		</form>
